Bug 447396 - Storyboard add scene adds empty keyframes on locked layers (krita-nightly-x64-5.0.0-beta5-e1828f1cae)
Summary: Storyboard add scene adds empty keyframes on locked layers (krita-nightly-x64...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Storyboard (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 452307 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-22 21:23 UTC by Hannah
Modified: 2022-04-05 21:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hannah 2021-12-22 21:23:06 UTC
STEPS TO REPRODUCE
1. import a layout template of choice with a layer or more to serve as the layout
2. lock the layer(s)
3. click on the plus button on the bottom left to create a new scene

OBSERVED RESULT
creating a new scene creates an empty keyframe on locked layers.

EXPECTED RESULT
Locked layers should maintain the earliest keyframe if a new scene is made

SOFTWARE/OS VERSIONS
Windows: 10
Krita: nightly-x64-5.0.0-beta5-e1828f1cae
Comment 1 Eoin O'Neill 2021-12-22 21:31:30 UTC
Thanks for reporting this bug. I can confirm it and will fix it soon.
Comment 2 Eoin O'Neill 2021-12-23 06:34:25 UTC
Git commit 75e397c903274ee8bcb6ab6da9797fccc310ec7d by Eoin O'Neill.
Committed on 23/12/2021 at 06:33.
Pushed by eoinoneill into branch 'master'.

Fix storyboarding docker creating keyframes on locked layers.

Also accounts for layer visibility as well. If you can't see it, you
won't edit the data which is probably the expected behavior.

M  +14   -4    plugins/dockers/storyboarddocker/StoryboardModel.cpp

https://invent.kde.org/graphics/krita/commit/75e397c903274ee8bcb6ab6da9797fccc310ec7d
Comment 3 Eoin O'Neill 2021-12-23 06:36:47 UTC
Thanks again for reporting this. Unfortunately, the 5.0 version will be coming out very soon (within 24 hours) so I don't think this commit will make it into the 5.0 version update.

However, if you need this feature immediately, you can try the nightly version. That version should be more or less the same. 

Cheers and happy holidays,
Eoin.
Comment 4 Eoin O'Neill 2022-04-05 21:18:26 UTC
*** Bug 452307 has been marked as a duplicate of this bug. ***
Comment 5 Eoin O'Neill 2022-04-05 21:46:29 UTC
Git commit 93e280f38259b4d55dcbebb29a38cdbb8cd7b560 by Eoin O'Neill.
Committed on 05/04/2022 at 21:16.
Pushed by eoinoneill into branch 'krita/5.0'.

Fix storyboarding docker creating keyframes on locked layers.

Also accounts for layer visibility as well. If you can't see it, you
won't edit the data which is probably the expected behavior.
Related: bug 452307
(cherry picked from commit 75e397c903274ee8bcb6ab6da9797fccc310ec7d)

M  +14   -4    plugins/dockers/storyboarddocker/StoryboardModel.cpp

https://invent.kde.org/graphics/krita/commit/93e280f38259b4d55dcbebb29a38cdbb8cd7b560