Fix storyboarding docker creating keyframes on locked layers.

Also accounts for layer visibility as well. If you can't see it, you
won't edit the data which is probably the expected behavior.

BUG:447396
CCBUG:452307
(cherry picked from commit 75e397c903274ee8bcb6ab6da9797fccc310ec7d)